# mico_rr_bridge

./: CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
scripts/: MicoRRService.py
