<?xml version="1.0"?>
<package>
  <name>mico_rr_bridge</name>
  <version>0.0.1</version>
  <description>The mico_rr_bridge package bridges the ROS-based control interface for the Kinova Mico Arm to a Robot Raconteur middleware service</description>

  <maintainer email="chintan.kaur@gmail.com">Chintan Kaur</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/mico_rr_bridge</url> -->
  <author email="chintan.kaur@gmail.com">Chintan Kaur</author> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>RobotRaconteur</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>RobotRaconteur</run_depend>

  <export>
 
  </export>
</package>
